[package]
name = "m2joy"
version = "0.2.0"
edition = "2021"
description = "Linux mouse-to-joystick injector for RetroArch (Wayland/evdev)"

[dependencies]
evdev = "0.12"
spin_sleep = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
